Fixed shrinked avatar on mobile

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -289,6 +289,7 @@ button[type="submit"].alert,
 
 #navbar .items li {
     margin: 0 .5em;
+    flex-shrink: 0;
 }
 
 #navbar .login {
